--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Home page-2.5</h1>
+    <p>ยินดีต้อนรับเข้าสู่เว็บไซต์ของฉัน</p>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
       velit blanditiis, dolores perferendis eius, adipisci aspernatur aperiam
